--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
             -webkit-tap-highlight-color: transparent;
         }
 
-        body {
-            background-color: #0a0a0a;
-            color: var(--gold-light);
-            font-family: 'Montserrat', sans-serif;
-            height: 100dvh;
-            width: 100vw;
+        body, html {
+            height: 100%;
+            width: 100%;
+            margin: 0;
             overflow: hidden;
+            background-color: #0a0a0a;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -45,23 +48,25 @@
             background: url('bisousfront.jpg') no-repeat center top / cover;
         }
 
-        .intro-container {
+        /* --- CONTAINER PRINCIPAL RESPONSIVE --- */
+        .main-wrapper {
             z-index: 1;
             opacity: 0;
             animation: fadeIn 2s ease-out forwards 0.5s;
-            width: 100%;
-            padding: 0 20px;
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-items: center;
-            margin-bottom: 180px; 
+            height: 100dvh;
+            width: 100%;
+            padding: 20px;
         }
 
         h1 {
             font-family: 'Great Vibes', cursive;
-            font-size: clamp(3.5rem, 15vw, 5.5rem);
+            font-size: clamp(3.2rem, 12vw, 5.5rem);
             font-weight: 400;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
             color: #fff;
             text-shadow: 2px 2px 20px rgba(0,0,0,0.8);
             background: linear-gradient(to bottom, #fff, var(--gold-light));
@@ -69,20 +74,11 @@
             -webkit-text-fill-color: transparent;
         }
 
-        .subtitle {
-            font-family: 'Montserrat', sans-serif;
-            letter-spacing: 5px;
-            font-size: 0.75rem;
-            margin-bottom: 10px;
-            color: var(--amber);
-            text-transform: uppercase;
-        }
-
         .countdown-container {
             display: flex;
             justify-content: center;
-            gap: 12px;
-            margin: 20px 0 30px 0;
+            gap: clamp(8px, 2vw, 15px);
+            margin: 20px 0;
         }
 
         .unit {
@@ -90,23 +86,23 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 60px;
-            height: 60px;
+            width: clamp(55px, 15vw, 65px);
+            height: clamp(55px, 15vw, 65px);
             background: rgba(0, 0, 0, 0.6);
             border: 1px solid rgba(244, 228, 188, 0.2);
             backdrop-filter: blur(8px);
-            border-radius: 4px;
+            border-radius: 6px;
         }
 
         .num {
-            font-size: 1.3rem;
+            font-size: clamp(1.1rem, 4vw, 1.4rem);
             font-weight: 600;
             color: #fff;
             line-height: 1;
         }
 
         .label {
-            font-size: 0.5rem;
+            font-size: clamp(0.45rem, 2vw, 0.55rem);
             text-transform: uppercase;
             letter-spacing: 1px;
             opacity: 0.9;
@@ -114,81 +110,80 @@
         }
 
         .date {
-            font-size: 0.9rem;
+            font-size: clamp(0.8rem, 3vw, 1rem);
             letter-spacing: 5px;
-            padding: 10px 0;
+            padding: 12px 0;
             font-weight: 200;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            border-top: 1px solid rgba(255, 255, 255, 0.2);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
             display: inline-block;
-            min-width: 230px;
+            min-width: 220px;
+            margin-bottom: 40px;
         }
 
-        /* --- BOUTON LARGEUR RÉDUITE ET REMONTÉ --- */
-        .btn-fixed-container {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            padding: 20px 20px 180px 20px; 
-            z-index: 10;
-            display: flex;
-            justify-content: center;
-            pointer-events: none;
-        }
-
+        /* --- BOUTON ADAPTATIF --- */
         .enter-btn {
-            pointer-events: auto;
             position: relative;
             display: block;
             text-decoration: none;
             color: #ffffff;
             background: linear-gradient(45deg, var(--fuchsia), var(--coral));
-            width: 70%; /* Longueur réduite */
-            max-width: 280px; /* Limite la largeur max */
-            padding: 18px 0; /* Un peu moins haut pour l'équilibre */
+            width: 80%;
+            max-width: 300px;
+            padding: 18px 0;
             font-family: 'Montserrat', sans-serif;
-            font-size: 0.85rem; /* Texte ajusté à la taille */
+            font-size: clamp(0.8rem, 2.5vw, 0.9rem);
             text-transform: uppercase;
             letter-spacing: 3px;
             font-weight: 600;
             border-radius: 50px;
-            box-shadow: 0 15px 35px rgba(216, 45, 126, 0.5);
+            box-shadow: 0 10px 30px rgba(216, 45, 126, 0.5);
             overflow: hidden;
-            transition: transform 0.2s ease;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
 
+        /* Effet Shimmer */
         .enter-btn::after {
             content: "";
             position: absolute;
             top: -50%;
             left: -60%;
-            width: 20%;
+            width: 30%;
             height: 200%;
             background: rgba(255, 255, 255, 0.3);
             transform: rotate(30deg);
-            animation: shine 3s infinite;
+            animation: shine 4s infinite;
         }
 
         @keyframes shine {
             0% { left: -60%; }
-            20% { left: 120%; }
+            15% { left: 120%; }
             100% { left: 120%; }
         }
 
         .enter-btn:active {
-            transform: scale(0.97);
+            transform: scale(0.96);
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
+            from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
-        @media (max-width: 480px) {
-            h1 { font-size: 3.5rem; }
-            .btn-fixed-container { padding-bottom: 160px; } 
-            .enter-btn { width: 75%; } /* Un peu plus large sur petit mobile */
+        /* --- AJUSTEMENTS SPÉCIFIQUES --- */
+
+        /* Écrans très petits (iPhone SE) */
+        @media (max-height: 670px) {
+            h1 { font-size: 3rem; }
+            .date { margin-bottom: 20px; }
+            .main-wrapper { justify-content: space-evenly; }
+        }
+
+        /* Tablettes et Desktop */
+        @media (min-width: 768px) {
+            .enter-btn { padding: 22px 0; max-width: 350px; }
+            .unit { width: 80px; height: 80px; }
+            .num { font-size: 1.8rem; }
         }
     </style>
 </head>
@@ -196,20 +191,20 @@
 
 <div class="bg-image"></div>
 
-<div class="intro-container">
-    <h1>Karen & Yossef</h1>
+<div class="main-wrapper">
+    <div class="content-block">
+        <h1>Karen & Yossef</h1>
 
-    <div class="countdown-container" id="timer">
-        <div class="unit"><span class="num" id="days">00</span><span class="label">Jours</span></div>
-        <div class="unit"><span class="num" id="hours">00</span><span class="label">Heures</span></div>
-        <div class="unit"><span class="num" id="mins">00</span><span class="label">Min</span></div>
-        <div class="unit"><span class="num" id="secs">00</span><span class="label">Sec</span></div>
+        <div class="countdown-container" id="timer">
+            <div class="unit"><span class="num" id="days">00</span><span class="label">Jours</span></div>
+            <div class="unit"><span class="num" id="hours">00</span><span class="label">Heures</span></div>
+            <div class="unit"><span class="num" id="mins">00</span><span class="label">Min</span></div>
+            <div class="unit"><span class="num" id="secs">00</span><span class="label">Sec</span></div>
+        </div>
+
+        <p class="date">14 JUIN 2026</p>
     </div>
-
-    <p class="date">14 JUIN 2026</p>
-</div>
-
-<div class="btn-fixed-container">
+    
     <a href="invitation.html" class="enter-btn">Voir l'invitation</a>
 </div>
 
