--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Karen & Yossef | L'Union</title>
+
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
+
     <style>
         :root {
             --fuchsia: #D82D7E;
@@ -34,6 +36,7 @@
             position: relative;
         }
 
+        /* FOND — NE BOUGE PAS */
         .bg-image {
             position: absolute;
             top: 0;
@@ -45,6 +48,7 @@
             background: url('bisousfront.jpg') no-repeat center top / cover;
         }
 
+        /* CONTENU CENTRAL — DESCENDU */
         .intro-container {
             z-index: 1;
             opacity: 0;
@@ -54,7 +58,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 180px; 
+            margin-bottom: 180px;
+            transform: translateY(40px); /* ⬇️ DESCENTE ICI */
         }
 
         h1 {
@@ -62,20 +67,10 @@
             font-size: clamp(3.5rem, 15vw, 5.5rem);
             font-weight: 400;
             margin-bottom: 5px;
-            color: #fff;
-            text-shadow: 2px 2px 20px rgba(0,0,0,0.8);
             background: linear-gradient(to bottom, #fff, var(--gold-light));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-        }
-
-        .subtitle {
-            font-family: 'Montserrat', sans-serif;
-            letter-spacing: 5px;
-            font-size: 0.75rem;
-            margin-bottom: 10px;
-            color: var(--amber);
-            text-transform: uppercase;
+            text-shadow: 2px 2px 20px rgba(0,0,0,0.8);
         }
 
         .countdown-container {
@@ -86,30 +81,28 @@
         }
 
         .unit {
+            width: 60px;
+            height: 60px;
+            background: rgba(0,0,0,0.6);
+            border: 1px solid rgba(244,228,188,0.2);
+            backdrop-filter: blur(8px);
+            border-radius: 4px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 60px;
-            height: 60px;
-            background: rgba(0, 0, 0, 0.6);
-            border: 1px solid rgba(244, 228, 188, 0.2);
-            backdrop-filter: blur(8px);
-            border-radius: 4px;
         }
 
         .num {
             font-size: 1.3rem;
             font-weight: 600;
             color: #fff;
-            line-height: 1;
         }
 
         .label {
             font-size: 0.5rem;
-            text-transform: uppercase;
             letter-spacing: 1px;
-            opacity: 0.9;
+            text-transform: uppercase;
             margin-top: 4px;
         }
 
@@ -117,45 +110,40 @@
             font-size: 0.9rem;
             letter-spacing: 5px;
             padding: 10px 0;
-            font-weight: 200;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            display: inline-block;
+            border-top: 1px solid rgba(255,255,255,0.1);
+            border-bottom: 1px solid rgba(255,255,255,0.1);
             min-width: 230px;
         }
 
-        /* --- BOUTON LARGEUR RÉDUITE ET REMONTÉ --- */
+        /* BOUTON — LÉGÈREMENT DESCENDU */
         .btn-fixed-container {
             position: fixed;
             bottom: 0;
             left: 0;
             width: 100%;
-            padding: 20px 20px 180px 20px; 
-            z-index: 10;
+            padding: 20px 20px 180px;
             display: flex;
             justify-content: center;
+            z-index: 10;
             pointer-events: none;
+            transform: translateY(20px); /* ⬇️ DESCENTE ICI */
         }
 
         .enter-btn {
             pointer-events: auto;
-            position: relative;
-            display: block;
-            text-decoration: none;
-            color: #ffffff;
+            width: 70%;
+            max-width: 280px;
+            padding: 18px 0;
             background: linear-gradient(45deg, var(--fuchsia), var(--coral));
-            width: 70%; /* Longueur réduite */
-            max-width: 280px; /* Limite la largeur max */
-            padding: 18px 0; /* Un peu moins haut pour l'équilibre */
-            font-family: 'Montserrat', sans-serif;
-            font-size: 0.85rem; /* Texte ajusté à la taille */
-            text-transform: uppercase;
+            color: #fff;
+            text-decoration: none;
+            font-size: 0.85rem;
             letter-spacing: 3px;
-            font-weight: 600;
+            text-transform: uppercase;
             border-radius: 50px;
-            box-shadow: 0 15px 35px rgba(216, 45, 126, 0.5);
+            box-shadow: 0 15px 35px rgba(216,45,126,0.5);
+            position: relative;
             overflow: hidden;
-            transition: transform 0.2s ease;
         }
 
         .enter-btn::after {
@@ -165,7 +153,7 @@
             left: -60%;
             width: 20%;
             height: 200%;
-            background: rgba(255, 255, 255, 0.3);
+            background: rgba(255,255,255,0.3);
             transform: rotate(30deg);
             animation: shine 3s infinite;
         }
@@ -176,22 +164,18 @@
             100% { left: 120%; }
         }
 
-        .enter-btn:active {
-            transform: scale(0.97);
-        }
-
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+            from { opacity: 0; transform: translateY(60px); }
+            to { opacity: 1; transform: translateY(40px); }
         }
 
         @media (max-width: 480px) {
-            h1 { font-size: 3.5rem; }
-            .btn-fixed-container { padding-bottom: 160px; } 
-            .enter-btn { width: 75%; } /* Un peu plus large sur petit mobile */
+            .intro-container { transform: translateY(50px); }
+            .btn-fixed-container { transform: translateY(25px); }
         }
     </style>
 </head>
+
 <body>
 
 <div class="bg-image"></div>
@@ -218,20 +202,20 @@
 
     function updateCountdown() {
         const now = new Date().getTime();
-        const difference = targetDate - now;
+        const diff = targetDate - now;
 
-        if (difference > 0) {
-            const d = Math.floor(difference / (1000 * 60 * 60 * 24));
-            const h = Math.floor((difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const m = Math.floor((difference % (1000 * 60 * 60)) / (1000 * 60));
-            const s = Math.floor((difference % (1000 * 60)) / 1000);
+        if (diff > 0) {
+            const d = Math.floor(diff / (1000 * 60 * 60 * 24));
+            const h = Math.floor((diff / (1000 * 60 * 60)) % 24);
+            const m = Math.floor((diff / (1000 * 60)) % 60);
+            const s = Math.floor((diff / 1000) % 60);
 
-            document.getElementById("days").innerText = d.toString().padStart(2, '0');
-            document.getElementById("hours").innerText = h.toString().padStart(2, '0');
-            document.getElementById("mins").innerText = m.toString().padStart(2, '0');
-            document.getElementById("secs").innerText = s.toString().padStart(2, '0');
+            days.innerText = d.toString().padStart(2, "0");
+            hours.innerText = h.toString().padStart(2, "0");
+            mins.innerText = m.toString().padStart(2, "0");
+            secs.innerText = s.toString().padStart(2, "0");
         } else {
-            document.getElementById("timer").innerHTML = "<h3 style='color:#fff; font-family:\"Great Vibes\", cursive; font-size: 2.5rem;'>C'est le grand jour !</h3>";
+            timer.innerHTML = "<h2 style='font-family:Great Vibes;color:white;'>C'est le grand jour ✨</h2>";
         }
     }
 
