--- a/invitation.html
+++ b/invitation.html
@@ -49,7 +49,7 @@
 
         @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
 
-        /* --- BOUTON MUSIQUE FESTIF --- */
+        /* --- BOUTON MUSIQUE --- */
         #musicToggle {
             position: fixed;
             bottom: 25px;
@@ -76,9 +76,9 @@
         }
 
         @keyframes pulseMusic {
-            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(216, 45, 126, 0.4); }
-            70% { transform: scale(1.1); box-shadow: 0 0 0 15px rgba(216, 45, 126, 0); }
-            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(216, 45, 126, 0); }
+            0% { transform: scale(1); }
+            70% { transform: scale(1.1); }
+            100% { transform: scale(1); }
         }
 
         .container {
@@ -113,7 +113,6 @@
             border-radius: 15px;
             box-shadow: 0 8px 20px rgba(0,0,0,0.1);
             overflow: hidden;
-            transition: transform 0.5s ease;
             margin: 25px 0;
         }
 
@@ -129,7 +128,7 @@
             padding: 14px; background: linear-gradient(45deg, var(--fuchsia), var(--coral));
             color: white; text-decoration: none; border-radius: 50px;
             font-weight: 600; text-transform: uppercase; letter-spacing: 1px;
-            border: none; cursor: pointer;
+            border: none; cursor: pointer; margin-top: 15px;
         }
 
         .btn-outline {
@@ -137,8 +136,24 @@
             margin-top: 10px; width: auto; padding: 8px 20px; font-size: 0.8rem;
         }
 
+        /* --- FORMULAIRE --- */
+        .rsvp-form { text-align: left; margin-top: 20px; }
+        .form-group { margin-bottom: 20px; }
+        label { display: block; font-size: 0.75rem; font-weight: 600; margin-bottom: 8px; color: #555; text-transform: uppercase; }
+        .required::after { content: " *"; color: var(--fuchsia); }
+
+        input[type="text"], select, textarea {
+            width: 100%; padding: 12px; border: 1px solid #e0e0e0; border-radius: 8px;
+            font-family: inherit; font-size: 0.95rem; background: white;
+        }
+
+        .radio-group { display: flex; gap: 20px; margin-top: 10px; }
+        .radio-item { display: flex; align-items: center; cursor: pointer; }
+        .radio-item input { margin-right: 8px; accent-color: var(--fuchsia); width: 18px; height: 18px; }
+
         hr { border: 0; border-top: 1px solid #eee; margin: 25px 0; }
         footer { text-align: center; padding: 40px 20px; background: white; }
+
         .reveal { opacity: 0; transform: translateY(20px); transition: 0.8s ease-out; }
         .reveal.active { opacity: 1; transform: translateY(0); }
 
@@ -167,6 +182,7 @@
 </header>
 
 <div class="container">
+
     <div class="wedding-card reveal">
         <p class="card-type">Union Civile</p>
         <h3 class="card-title cormorant">La Mairie</h3>
@@ -175,7 +191,7 @@
             À la Mairie de <strong>CHARENTON-LE-PONT</strong><br>
             Cérémonie à : <span style="color:var(--coral); font-weight:600;">13H30</span>
         </div>
-        <a href="https://maps.google.com" target="_blank" class="btn-action btn-outline">Itinéraire Mairie</a>
+        <a href="https://maps.google.com/?q=Mairie+de+Charenton-le-Pont" target="_blank" class="btn-action btn-outline">Itinéraire Mairie</a>
     </div>
 
     <div class="image-section img-bague reveal"></div>
@@ -189,8 +205,69 @@
             Au <strong>CHÂTEAU DES HAUTS DE PROVINS</strong><br>
             Début : <span style="color:var(--coral); font-weight:600;">16H30</span>
         </div>
-        <a href="https://waze.com" target="_blank" class="btn-action btn-outline">Y aller avec Waze</a>
+        <a href="https://waze.com/ul?q=Chateau+des+Hauts+de+Provins" target="_blank" class="btn-action btn-outline">Y aller avec Waze</a>
     </div>
+
+    <div class="wedding-card reveal">
+        <p class="card-type">Réponse souhaitée</p>
+        <h3 class="card-title cormorant">Confirmation</h3>
+
+        <form id="rsvpForm" class="rsvp-form" action="https://formspree.io/f/VOTRE_ID" method="POST">
+            <div class="form-group">
+                <label class="required">Nom & Prénom</label>
+                <input type="text" name="nom_complet">
+            </div>
+
+            <hr>
+
+            <div class="form-group">
+                <label class="required">Serez-vous présent à la Mairie ?</label>
+                <select name="presence_mairie" id="presence_mairie" onchange="toggleMairie()" required>
+                    <option value="" disabled selected>Choisissez une option</option>
+                    <option value="oui">OUI, avec plaisir</option>
+                    <option value="non">NON, avec regret</option>
+                </select>
+            </div>
+
+            <div id="section_mairie" style="display:none;">
+                <label class="required">Nombre de personnes (Mairie)</label>
+                <div class="radio-group">
+                    <label class="radio-item"><input type="radio" name="nb_mairie" value="1"> 1 Personne</label>
+                    <label class="radio-item"><input type="radio" name="nb_mairie" value="2"> 2 Personnes</label>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="form-group">
+                <label class="required">Serez-vous présent à la Houppa ?</label>
+                <select name="presence_houppa" id="presence_houppa" onchange="toggleHouppa()" required>
+                    <option value="" disabled selected>Choisissez une option</option>
+                    <option value="oui">OUI, avec plaisir</option>
+                    <option value="non">NON, avec regret</option>
+                </select>
+            </div>
+
+            <div id="section_houppa" style="display:none;">
+                <label class="required">Nombre de personnes (Houppa)</label>
+                <div class="radio-group">
+                    <label class="radio-item"><input type="radio" name="nb_houppa" value="1"> 1 Personne</label>
+                    <label class="radio-item"><input type="radio" name="nb_houppa" value="2"> 2 Personnes</label>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="form-group">
+                <label>Un message pour les mariés ?</label>
+                <textarea name="message" rows="3" placeholder="Votre petit mot doux..."></textarea>
+            </div>
+
+            <button type="submit" class="btn-action">Envoyer ma réponse</button>
+        </form>
+    </div>
+
+    <div class="image-section img-maison reveal"></div>
 </div>
 
 <footer>
@@ -199,17 +276,32 @@
 </footer>
 
 <script>
+    // --- GESTION DES SECTIONS DU FORMULAIRE ---
+    function toggleMairie() {
+        const val = document.getElementById('presence_mairie').value;
+        const section = document.getElementById('section_mairie');
+        section.style.display = (val === 'oui') ? 'block' : 'none';
+        const inputs = section.querySelectorAll('input');
+        inputs.forEach(i => i.required = (val === 'oui'));
+    }
+
+    function toggleHouppa() {
+        const val = document.getElementById('presence_houppa').value;
+        const section = document.getElementById('section_houppa');
+        section.style.display = (val === 'oui') ? 'block' : 'none';
+        const inputs = section.querySelectorAll('input');
+        inputs.forEach(i => i.required = (val === 'oui'));
+    }
+
     // --- GESTION MUSIQUE ---
     const audio = document.getElementById('weddingMusic');
     const musicToggle = document.getElementById('musicToggle');
-    // Icons : Cœur vibrant quand ça joue, Note de musique quand c'est en pause
     const icons = { play: "💖", pause: "🎶" };
 
     document.addEventListener('DOMContentLoaded', () => {
         if (localStorage.getItem('weddingMusicPlaying') === 'true') {
             const savedTime = localStorage.getItem('weddingMusicTime');
             if (savedTime) audio.currentTime = parseFloat(savedTime);
-
             audio.play().then(() => {
                 musicToggle.classList.add('playing');
                 musicToggle.innerText = icons.play;
