--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <p class="date">14 JUIN 2026</p>
     </div>
 
-    <a href="invitation.html" class="enter-btn">Voir l'invitation</a>
+    <a href="test/invitation.html" class="enter-btn">Voir l'invitation</a>
 </div>
 
 <script>
