--- a/invitation.html
+++ b/invitation.html
@@ -34,7 +34,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(to bottom, rgba(255,255,255,0.1), var(--soft-white)), url('../maisonVueHauteur.JPG') no-repeat center center / cover;
+            background: linear-gradient(to bottom, rgba(255,255,255,0.1), var(--soft-white)), url('maisonVueHauteur.JPG') no-repeat center center / cover;
             text-align: center;
             padding: 20px;
         }
@@ -115,8 +115,8 @@
             margin: 25px 0;
         }
 
-        .img-bague { height: 450px; background: url('../bague.JPG') no-repeat center center / cover; }
-        .img-maison { height: 250px; background: url('../maison.JPG') no-repeat center center / cover; }
+        .img-bague { height: 450px; background: url('bague.JPG') no-repeat center center / cover; }
+        .img-maison { height: 250px; background: url('maison.JPG') no-repeat center center / cover; }
 
         .card-type { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 3px; color: var(--fuchsia); margin-bottom: 10px; font-weight: 600; }
         .card-title { font-size: clamp(1.8rem, 6vw, 2.5rem); color: var(--amber); margin-bottom: 10px; }
@@ -172,10 +172,10 @@
 <body>
 
 <button id="musicToggle">🎶</button>
-<audio id="weddingMusic" src="../musique.mp3" preload="auto" loop></audio>
+<audio id="weddingMusic" src="musique.mp3" preload="auto" loop></audio>
 
 <header>
-    <img src="../logo2.png" alt="Karen & Yossef" class="logo-main">
+    <img src="logo2.png" alt="Karen & Yossef" class="logo-main">
     <p class="cormorant" style="font-size: 1.4rem; color: var(--amber); font-style: italic;">Sous le regard de Hachem</p>
 </header>
 
@@ -195,7 +195,7 @@
     <div class="image-section img-bague reveal"></div>
 
     <div class="wedding-card reveal">
-        <img src="../hebreu.png" alt="Bénédiction" style="width: 85%; max-width: 380px; margin: 0 auto 10px; display: block; filter: invert(33%) sepia(82%) saturate(2462%) hue-rotate(307deg) brightness(65%) contrast(92%);">
+        <img src="hebreu.png" alt="Bénédiction" style="width: 85%; max-width: 380px; margin: 0 auto 10px; display: block; filter: invert(33%) sepia(82%) saturate(2462%) hue-rotate(307deg) brightness(65%) contrast(92%);">
 
         <p class="card-type" style="margin-bottom: 20px;">Cérémonie Religieuse</p>
 
